# just-my-links

./: .claude-code.prompt.md  .dir-locals.el  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.ipynb  README.md  README.org  architecture-plan.chat.md  aws-configuration.ipynb  chromadb-playground.ipynb  current-work.ipynb  deploy.sh  main.py  pyproject.toml  research.org
.beads/: issues.jsonl
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/justmylinks/: MainActivity.kt
android/app/src/main/java/com/justmylinks/data/: ApiClient.kt  PreferencesRepository.kt
android/app/src/main/java/com/justmylinks/ui/screens/: BrowserScreen.kt  SearchScreen.kt  SettingsScreen.kt
android/app/src/main/java/com/justmylinks/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
assets/: stop-words.txt
chrome-extension/: manifest.json  options.html  options.js  popup.html  popup.js
cloudformation/: README.md
cloudformation/parameters/: dev.env
cloudformation/scripts/: deploy.sh  validate.sh
cloudformation/templates/: README.md  main.yaml
document-storage-service/: .dir-locals.el  .dockerignore  Dockerfile  pyproject.toml
document-storage-service/src/: app.py
document-storage-service/tests/: test_multipart_parsing.py
index-documents-service/: Dockerfile  pyproject.toml
index-documents-service/src/: app.py  stop-words.txt
index-documents-service/tests/: test_indexing.py
indexing-service/: pyproject.toml
indexing-service/scripts/: deploy.py  deploy.sh
indexing-service/src/: app.py
research/: semantic-search.org
scripts/: deploy-document-storage-service.py  deploy-indexing-service.py  deploy-search-service.py  generate_markdown_readme.py  jml.py  search.py
scripts/sqlite-documents-db/migrations/: 000-initial-schema.py  001-add-migrations-table.py  002-add-tags-and-titles.py  framework.py
search-documents-service/: Dockerfile  pyproject.toml
search-documents-service/src/: app.py
search-documents-service/tests/: test_search.py
tests/integration/: README.md  fixture.db
tools/: for-emacs.org
