[project]
name = "just-my-links"
version = "0.1.0"
description = "A cloud-based, personal, self 'hosted' (except its in the cloud) url/bookmarking service."
readme = "README.ipynb"
requires-python = ">=3.13.0"
dependencies = [
    "boto3>=1.38.27",
    "chromadb>=1.0.12",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "requests>=2.32.3",
]
