[project]
name = "index-documents-service"
version = "0.1.0"
description = "Just My Links document indexing service"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[all]>=3.0.0",
    "boto3>=1.35.0",
    "sqlite-vec>=0.1.7",
    "pysqlite3>=0.5.0; sys_platform == 'linux'",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "ipython>=9.3.0",
]
